@@ -16,7 +16,7 @@ class Translations extends TranslationCollection
         'plural_Order'  => 'bestellingen',
         'plural_CreditNote' => 'creditnota\'s',
         'plural_Other' => 'overige',
-        'plural_Order_ref'  => 'bestelling-referenties',
+        'plural_Order_ref'  => 'bestellingreferenties',
         'plural_CreditNote_ref' => 'creditnotareferenties',
         'plural_Order_id'  => 'bestellingnummers',
         'plural_CreditNote_id' => 'creditnotanummers',
@@ -41,7 +41,7 @@ class Translations extends TranslationCollection
         'fee_adjustment' => 'Kosten (soort onbekend)',
         'discount_adjustment' => 'Handmatige korting',
 
-        'message_warning_no_email' => 'De factuur bevat geen emailadres van de klant. Hierdoor kan er geen relatie in Acumulus aangemaakt of bijgewerkt worden. U kunt zelf in Acumulus een andere relatie aan deze factuur koppelen.',
+        'message_warning_no_email' => 'De factuur bevat geen e-mailadres van de klant. Hierdoor kan er geen relatie in Acumulus aangemaakt of bijgewerkt worden. U kunt zelf in Acumulus een andere relatie aan deze factuur koppelen.',
         'message_warning_no_vat' => 'De factuur bevat geen btw en er kan niet bepaald worden welk factuurtype (https://wiki.acumulus.nl/index.php?page=127) van toepassing is. Daarom is de factuur als concept opgeslagen. Corrigeer de factuur in Acumulus en controleer uw btw instellingen.',
         'message_warning_no_vattype' => 'Door een fout in uw instellingen of btw tarieven, kan het factuurtype (https://wiki.acumulus.nl/index.php?page=127) niet bepaald worden. Daarom is de factuur als concept opgeslagen. Corrigeer de factuur in Acumulus.',
         'message_warning_line_without_vat' => 'Één of meer van de factuurregels hebben geen btw terwijl is ingesteld dat er "Alleen aan btw onderhevige producten en/of diensten." aangeboden worden. Daarom is de factuur als concept opgeslagen. Corrigeer de factuur in Acumulus en controleer uw instellingen.',
@@ -50,7 +50,7 @@ class Translations extends TranslationCollection
         'message_warning_multiple_vattype_may_split' => 'De factuur kan meerdere factuurtypes hebben (https://wiki.acumulus.nl/index.php?page=127). Daarom is de factuur als concept opgeslagen. Controleer het btw type van de factuur in Acumulus en corrigeer deze indien nodig, of splits de factuur en verdeel de regels over beide facturen gebaseerd op het btw type waar de regel onder valt.',
         'message_warning_no_pdf' => 'Vanwege deze waarschuwing is er ook geen PDF factuur naar de klant verstuurd. U dient dit handmatig alsnog te doen.',
         'message_warning_old_entry_deleted' => 'De factuur heeft een oudere boeking voor deze %1$s in Acumulus overschreven. Deze oudere boeking met boeknummer %2$d is in Acumulus naar de prullenbak verplaatst en is daar nu terug te vinden onder "Overzichten » Laatste boekingen » Verwijderde boekingen".',
-        'message_warning_old_entry_not_deleted' => 'De factuur heeft een oudere boeking voor deze %1$s in Acumulus overschreven. We hebben geprobeerd deze oudere boeking met boeknummer %2$d in Acumulus naar de prullenbak te verplaatsen, maar dit is niet gelukt omdat de oude factuur waarsachijnlijk al verwijderd was. Deze oude factuur kan misschien nog steeds teruggevonden worden onder "Overzichten » Laatste boekingen » Verwijderde boekingen".',
+        'message_warning_old_entry_not_deleted' => 'De factuur heeft een oudere boeking voor deze %1$s in Acumulus overschreven. We hebben geprobeerd deze oudere boeking met boeknummer %2$d in Acumulus naar de prullenbak te verplaatsen, maar dit is niet gelukt omdat de oude factuur waarschijnlijk al verwijderd was. Deze oude factuur kan misschien nog steeds teruggevonden worden onder "Overzichten » Laatste boekingen » Verwijderde boekingen".',
     );
 
     protected $en = array(
@@ -59,12 +59,12 @@ class Translations extends TranslationCollection
         Source::Other => 'other',
 
         'plural_Order'  => 'orders',
-        'plural_CreditNote' => 'creditnotes',
+        'plural_CreditNote' => 'credit notes',
         'plural_Other' => 'other',
         'plural_Order_ref'  => 'order references',
-        'plural_CreditNote_ref' => 'creditnote references',
+        'plural_CreditNote_ref' => 'credit note references',
         'plural_Order_id'  => 'order numbers',
-        'plural_CreditNote_id' => 'creditnote numbers',
+        'plural_CreditNote_id' => 'credit note numbers',
 
         'for' => 'for',
         'vat' => 'VAT',
@@ -85,8 +85,8 @@ class Translations extends TranslationCollection
         'fee_adjustment' => 'Fee (unknown type)',
         'discount_adjustment' => 'Manual discount',
 
-        'message_warning_no_email' => 'The invoice does not have a customer email adrress. Therefore we could not create or update a relation in Acumulus. You can connect a relation to this invoice yourself.',
-        'message_warning_no_vat' => 'The invoice does not have VAT and it is not possible to determine the invoice type (https://wiki.acumulus.nl/index.php?page=127). The invoice has been saved as concept. Correct the invoice in acumulus and check your VAT settings.',
+        'message_warning_no_email' => 'The invoice does not have a customer email address. Therefore we could not create or update a relation in Acumulus. You can connect a relation to this invoice yourself.',
+        'message_warning_no_vat' => 'The invoice does not have VAT and it is not possible to determine the invoice type (https://wiki.acumulus.nl/index.php?page=127). The invoice has been saved as concept. Correct the invoice in Acumulus and check your VAT settings.',
         'message_warning_no_vattype' => 'Due to an error in your settings or VAT rates, we could not determine the invoice type for the invoice (https://wiki.acumulus.nl/index.php?page=127). The invoice has been saved as concept. Correct the invoice in Acumulus.',
         'message_warning_line_without_vat' => 'One or more of your invoice lines do not have VAT while you configured that you sell "Only products or services that are VAT liable.". The invoice has been saved as concept. Correct the invoice in Acumulus and check your settings.',
         'message_warning_strategies_failed' => 'Due to an error in your settings or VAT rates, we could not complete all invoice lines correctly. The invoice has been saved as concept. Correct the invoice in Acumulus.',
