@@ -21,6 +21,7 @@ WC3 = WooCommerce 3 (WordPress)
 ------------------
 - ALL: Als je vanaf nu een factuur opnieuw en geforceerd verstuurd, zal de oude
   boeking de "verwijderd" status krijgen. Je ontvangt hierover een mail.
+- ALL: meerdere spelfouten uit de NL en EN vertalingen gehaald.
 - ALL: fouten en waarschuwingen van een ander API request (vooralsnog opvragen
   btw tarieven en verwijderen oude entry) worden toegvoegd aan het
   overall resultaat van de hoofdbewerking (add invoice).
